tests/fail/aşırı-yükleme-hatası.kip

(bu tam-sayıyla) dene, bu.

("a"'yla) dene.
